<?xml version="1.0" encoding="utf-8" ?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_close_dialog"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimaryDark">

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/_1sdp"
        app:contentPadding="@dimen/_12sdp">

        <LinearLayout
            android:id="@+id/line_p1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="left"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_15sdp"
                android:text="App not Working!"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12sdp"
                android:fontFamily="@font/amaranth_regular"
                android:text="@string/step1"
                android:textColor="@color/black90"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12sdp"
                android:fontFamily="@font/amaranth_regular"
                android:text="@string/step2"
                android:textColor="@color/black90"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12sdp"
                android:fontFamily="@font/amaranth_regular"
                android:text="@string/step3"
                android:textColor="@color/black90"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12sdp"
                android:fontFamily="@font/amaranth_regular"
                android:text="@string/step4"
                android:textColor="@color/black90"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/tvOk"
                android:layout_width="50.0dip"
                android:layout_height="30.0dip"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/_22sdp"
                android:fontFamily="@font/amaranth_regular"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_16ssp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>