<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white30"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Settings"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                android:padding="5dp"
                android:src="@drawable/ic_back" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/_8sdp"
                android:orientation="horizontal" />


        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_15sdp"
        android:layout_weight="1.0"
        app:cardBackgroundColor="#ffffffff"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_1sdp"
        app:cardMaxElevation="@dimen/_2sdp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/_12sdp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llRateUs"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="@dimen/_15sdp"
                    android:layout_weight="1.0"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:background="@drawable/ic_rate"
                        android:tint="@color/black90" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:text="@string/rate_app_name"
                        android:textAllCaps="false"
                        android:textColor="@color/black90"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llShare"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="@dimen/_15sdp"
                    android:layout_weight="1.0"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:background="@drawable/ic_share_black_24dp"
                        android:tint="@color/black90" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/_8sdp"

                        android:text="@string/share_app_tag"
                        android:textAllCaps="false"
                        android:textColor="@color/black90"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llPolicy"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="@dimen/_15sdp"
                    android:layout_weight="1.0"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:src="@drawable/ic_policy"
                        android:tint="@color/black90" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:text="@string/privacy_policy"
                        android:textAllCaps="false"
                        android:textColor="@color/black90"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1.0dip"
                    android:background="@color/black30" />


                <LinearLayout
                    android:id="@+id/llAppNotWorking"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="@dimen/_15sdp"
                    android:layout_weight="1.0"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:rotation="45.0"
                        android:src="@drawable/ic_notworking"
                        android:tint="@color/black90" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/_8sdp"

                        android:text="@string/appNotWorking"
                        android:textAllCaps="false"
                        android:textColor="@color/black90"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/disclaimer"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="@dimen/_15sdp"
                    android:layout_weight="1.0"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:rotation="45.0"
                        android:src="@drawable/ic_policy"
                        android:tint="@color/black90" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/_8sdp"

                        android:text="@string/disclaimer"
                        android:textAllCaps="false"
                        android:textColor="@color/black90"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1.0dip"
                    android:background="@color/black90" />

                <LinearLayout
                    android:id="@+id/llFeedback"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="@dimen/_15sdp"
                    android:layout_weight="1.0"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:src="@drawable/ic_help"
                        android:tint="@color/black90" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:text="@string/contact"
                        android:textAllCaps="false"
                        android:textColor="@color/black90"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/clearApp"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="@dimen/_15sdp"
                    android:layout_weight="1.0"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:src="@drawable/ic_delete_black_24dp"
                        android:tint="@color/black90" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:text="@string/cleardata"
                        android:textAllCaps="false"
                        android:textColor="@color/black90"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>
</LinearLayout>
